--- a/hollysome/Application/GoogleService-Info.plist
+++ b/hollysome/Application/GoogleService-Info.plist
@@ -2,39 +2,29 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>AD_UNIT_ID_FOR_BANNER_TEST</key>
-	<string>ca-app-pub-3940256099942544/2934735716</string>
-	<key>AD_UNIT_ID_FOR_INTERSTITIAL_TEST</key>
-	<string>ca-app-pub-3940256099942544/4411468910</string>
-	<key>CLIENT_ID</key>
-	<string>899989826321-mcip6rkdj86kljpst8k17ekrve7ralnm.apps.googleusercontent.com</string>
-	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.899989826321-mcip6rkdj86kljpst8k17ekrve7ralnm</string>
 	<key>API_KEY</key>
-	<string>AIzaSyAVK9KG4KWQFAOLxgbVoq9UH3aGkqX_Pu8</string>
+	<string>AIzaSyAFcilga-z2DmmjIHnLx2X_CoRGqcN6BQY</string>
 	<key>GCM_SENDER_ID</key>
-	<string>899989826321</string>
+	<string>201665160506</string>
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>rocateer.RocateerKit</string>
+	<string>sseung.noommate</string>
 	<key>PROJECT_ID</key>
-	<string>hollysome</string>
+	<string>noommate-77efd</string>
 	<key>STORAGE_BUCKET</key>
-	<string>rocateerkit.appspot.com</string>
+	<string>noommate-77efd.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
-	<true/>
+	<false></false>
 	<key>IS_ANALYTICS_ENABLED</key>
-	<false/>
+	<false></false>
 	<key>IS_APPINVITE_ENABLED</key>
-	<false/>
+	<true></true>
 	<key>IS_GCM_ENABLED</key>
-	<true/>
+	<true></true>
 	<key>IS_SIGNIN_ENABLED</key>
-	<true/>
+	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:899989826321:ios:4c6552d611b3b054</string>
-	<key>DATABASE_URL</key>
-	<string>https://rocateerkit.firebaseio.com</string>
+	<string>1:201665160506:ios:399d4dd3800ac9dda21c03</string>
 </dict>
 </plist>
